--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon ./bin/www"
+    "watch": "nodemon -e js,mjs,json,jade ./bin/www"
   },
   "engines": {
     "node": "~12.18.2",
