--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jade": "~1.11.0",
     "mongoose": "^5.9.28",
     "morgan": "~1.9.1",
-    "readline": "^1.3.0"
+    "readline": "^1.3.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
