--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon -e js,mjs,json,jade ./bin/www"
+    "build": "npx babel app_client/**/*.js -o public/angular/loc8r.min.js",
+    "watch": "nodemon -e js,mjs,json,jade ./bin/www"    
   },
   "engines": {
     "node": "~12.18.2",
@@ -22,6 +23,9 @@
     "request": "^2.88.2"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-minify": "^0.5.1",
     "nodemon": "^2.0.4"
   }
 }
