--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "build": "npx babel app_client/**/*.js -o public/angular/loc8r.min.js",
-    "watch": "nodemon -e js,mjs,json,jade ./bin/www"
+    "watch": "nodemon -e js,mjs,json,jade,html ./bin/www"
   },
   "engines": {
     "node": "~12.18.2",
